<resources>
    <string name="app_name">games</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="actionBar_game_list_title">Perfil!</string>
    <string name="actionBar_game_register_title">New game!</string>
    <string name="actionBar_game_register_user">New User!</string>
    <string name="description">With our app it will be much easier and more fun to keep track of your games!</string>
    <string name="remember">Remember</string>
    <string name="your_email">Your e-mail</string>
    <string name="your_password">Your password</string>
    <string name="enter">Enter</string>
    <string name="developed">Developed by DS2M</string>
    <string name="new_account">Criar uma conta</string>
    <string name="account">New account</string>
    <string name="games">Games</string>
    <string name="game_register_title">New Game!</string>
    <string name="escolher_foto">Shall we choose a photo?</string>
    <string name="dados_autenticacao">Authentication data</string>
    <string name="dados_pessoais">Personal dates</string>
    <string name="your_name_question">What is your name?</string>
    <string name="your_city_question">What is your city?</string>
    <string name="birth_date_question">What is your birth date?</string>
    <string name="player_level_question">What is your player level?</string>
    <string name="casual">Casual</string>
    <string name="preferred_console_question">What is your preferred console?</string>
    <string name="sex">Sexo:</string>
    <string name="sex_masculine">Masculine</string>
    <string name="sex_feminine">Feminine</string>
    <string name="games_finished">Games Finished</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="age">Age</string>
    <string name="name_profile" />
    <string name="name_profile_games">Larissa Nunes</string>
    <string name="email_games_profile">larissanunes@senai.com</string>
    <string name="nivel_profile" />
    <string name="nivel_exibido_profile">Nivel Exibido</string>
    <string name="jogos_cadastrados">Seus Jogos Cadastrados</string>
</resources>